fixed css rule causing x overflow

--- a/sass/components/_contact.scss
+++ b/sass/components/_contact.scss
@@ -90,7 +90,7 @@ form textarea {
     font-family:monospace;
     position: absolute;
     bottom:1em;
-    width: 100vw;
+    width: 100%;
     display:flex;
     justify-content: center;
     align-items: center;
